[gd_scene load_steps=5 format=3 uid="uid://btgmfnvje1ywh"]

[ext_resource type="Script" path="res://Myassets/Scenes/Online/online_match.gd" id="1_jnjkb"]
[ext_resource type="Script" path="res://Myassets/Scripts/ProgressBar/progress_bar.gd" id="3_nswyk"]

[sub_resource type="AnimatedTexture" id="AnimatedTexture_3nlmj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wgugv"]
size = Vector2(612, 172)

[node name="OnlineMatch" type="Node2D"]
position = Vector2(274, 340)
script = ExtResource("1_jnjkb")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(1, 0)

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(157, 78)
scale = Vector2(608.75, 170.75)
texture = SubResource("AnimatedTexture_3nlmj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(158, 79)
shape = SubResource("RectangleShape2D_wgugv")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(160, -59)
zoom = Vector2(1.9, 1.9)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="ProgressBar" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.26
anchor_top = 0.83642
anchor_right = 0.436215
anchor_bottom = 0.83642
offset_left = -146.52
offset_top = -418.0
offset_right = -142.52
offset_bottom = -391.0
script = ExtResource("3_nswyk")
metadata/_edit_use_anchors_ = true

[node name="ProgressBar2" type="ProgressBar" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.26
anchor_top = 0.83642
anchor_right = 0.436215
anchor_bottom = 0.83642
offset_left = 217.48
offset_top = -415.0
offset_right = 221.48
offset_bottom = -388.0
script = ExtResource("3_nswyk")
metadata/_edit_use_anchors_ = true

[node name="win1P2" type="ColorRect" parent="."]
offset_left = 396.0
offset_top = -181.0
offset_right = 417.0
offset_bottom = -162.0
metadata/_edit_use_anchors_ = true

[node name="win2P2" type="ColorRect" parent="."]
offset_left = 369.0
offset_top = -181.0
offset_right = 390.0
offset_bottom = -162.0
rotation = -0.0020408
metadata/_edit_use_anchors_ = true

[node name="win1P1" type="ColorRect" parent="."]
offset_left = -122.0
offset_top = -182.0
offset_right = -102.0
offset_bottom = -162.0
metadata/_edit_use_anchors_ = true

[node name="win2P1" type="ColorRect" parent="."]
offset_left = -97.0
offset_top = -182.0
offset_right = -77.0
offset_bottom = -162.0
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="."]
offset_left = 304.0
offset_top = -54.0
offset_right = 344.0
offset_bottom = -31.0

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://Myassets/Entities/PCharacter/PcharacterOnline.tscn")
spawn_path = NodePath("../Players")
spawn_limit = 2

[node name="Players" type="Node2D" parent="."]
